--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>springbootjenkinspract</finalName>
+		<finalName>jenkinslab</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
